added upload, move and rename files to filemanager.

--- a/uthando/php/Uthando/File/MimeTypes.ini
+++ b/uthando/php/Uthando/File/MimeTypes.ini
@@ -137,6 +137,7 @@ h = text/plain
 hh = text/plain
 htm = text/html
 html = text/html
+json = text/plain
 m = text/plain
 rtf = text/rtf
 rtx = text/richtext
