--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 public_html/Common/tmp/*
-public_html/admin/Common/tmp/*
+!index.html
+public_html/admin/Common/tmp/
+!index.html
 public_html/components/ushop/html/terms.html
 public_html/userfiles/*
+!index.html
 uthando/ini/*
 uthando/logs/*
 uthando.session
