--- a/public_html/admin/.htaccess
+++ b/public_html/admin/.htaccess
@@ -1,20 +1,23 @@
-AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/x-javascript application/javascript
+#AddType x-mapp-php5 .php
+
+#AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/x-javascript application/javascript
 #BrowserMatch \bMSIE\s6 no-gzip
 
 #ExpiresActive On
 
-ExpiresByType text/html "access plus 1 month"
-ExpiresByType text/css "access plus 1 month"
-ExpiresByType application/javascript "access plus 1 month"
-ExpiresByType text/javascript "access plus 1 month"
-ExpiresByType image/gif "access plus 1 month"
-ExpiresByType image/jpg "access plus 1 month"
-ExpiresByType image/jpeg "access plus 1 month"
-ExpiresByType image/png "access plus 1 month"
-ExpiresByType application/x-shockwave-flash "access plus 1 month"
+#ExpiresByType text/html "access plus 1 month"
+#ExpiresByType text/css "access plus 1 month"
+#ExpiresByType application/javascript "access plus 1 month"
+#ExpiresByType text/javascript "access plus 1 month"
+#ExpiresByType image/gif "access plus 1 month"
+#ExpiresByType image/jpg "access plus 1 month"
+#ExpiresByType image/jpeg "access plus 1 month"
+#ExpiresByType image/png "access plus 1 month"
+#ExpiresByType application/x-shockwave-flash "access plus 1 month"
 
-FileETag none
+#FileETag none
 
+#Options -MultiViews
 RewriteEngine On
 
 ########## Start - rewrite for sef's
@@ -22,9 +25,9 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !^/index.php
 #RewriteCond %{REQUEST_URI} (/|\.php|\.html|\.htm|\.feed|\.pdf|\.raw|/[^.]*)$  [NC]
-RewriteRule (.*) index.php
-RewriteCond %{HTTP:Authorization}  !^$
-RewriteRule .* - [E=REMOTE_USER:%{HTTP:Authorization}]
+RewriteRule ^(.*)$ /index.php
+#RewriteCond %{HTTP:Authorization}  !^$
+#RewriteRule .* - [E=REMOTE_USER:%{HTTP:Authorization}]
 #RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
 ########## End - sef's
 
