--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 setup/*
-Uthando-Apache/*
+Uthando-Apache/sites-available/*
+!default
+Uthando-Apache/sites-enabled/*
+!000-default
 Public/tmp/*
 !index.html
 Uthando-Admin/Common/tmp/
