--- a/Uthando-Apache/conf/uthando-cms.conf
+++ b/Uthando-Apache/conf/uthando-cms.conf
@@ -35,32 +35,32 @@ FileETag none
 </Directory>
 
 <Directory /home/uthando-cms/Public>
-	Order Deny,Allow
+	Order Allow,Deny
 	Allow from All
 </Directory>
 
 # Common Uthando Alaises
 Alias /images/ /home/uthando-cms/Uthando-Images/
 <Directory /home/uthando-cms/Uthando-Images/>
-	Order Deny,Allow
+	Order Allow,Deny
 	Allow from All
 </Directory>
 
 Alias /uthando-css/ /home/uthando-cms/Uthando-CSS/
 <Directory /home/uthando-cms/Uthando-CSS/>
-	Order Deny,Allow
+	Order Allow,Deny
 	Allow from All
 </Directory>
 
 Alias /uthando-js/ /home/uthando-cms/Uthando-JS/
 <Directory /home/uthando-cms/Uthando-JS/>
-	Order Deny,Allow
+	Order Allow,Deny
 	Allow from All
 </Directory>
 
 Alias /templates/ /home/uthando-cms/Uthando-Templates/
 <Directory /home/uthando-cms/Uthando-Templates/>
-	Order Deny,Allow
+	Order Allow,Deny
 	Allow from All
 </Directory>
 
