apache conf update

--- a/Uthando-Apache/conf/uthando-cms.conf
+++ b/Uthando-Apache/conf/uthando-cms.conf
@@ -6,7 +6,16 @@ FileETag none
 	Order Deny,Allow
 	Deny from All
 	
-	ExpiresActive Off
+	# these are known to be safe with MSIE 6
+	AddOutputFilterByType DEFLATE text/html text/plain text/xml
+
+	# everything else may cause problems with MSIE 6
+	AddOutputFilterByType DEFLATE text/css
+	AddOutputFilterByType DEFLATE application/x-javascript application/javascript application/ecmascript
+	AddOutputFilterByType DEFLATE application/rss+xml
+	BrowserMatch \bMSIE\s6 no-gzip
+	
+	ExpiresActive On
 	ExpiresDefault "access plus 1 month"
 	
 	RewriteEngine On
