error pages updated.

--- a/Uthando-Apache/conf/uthando-cms.conf
+++ b/Uthando-Apache/conf/uthando-cms.conf
@@ -48,6 +48,11 @@ FileETag none
 	Allow from All
 </Directory>
 
+<Directory /home/uthando-cms/Uthando-Admin>
+	Order Allow,Deny
+	Allow from All
+</Directory>
+
 # Common Uthando Alaises
 Alias /images/ /home/uthando-cms/Uthando-Images/
 <Directory /home/uthando-cms/Uthando-Images/>
@@ -73,12 +78,16 @@ Alias /templates/ /home/uthando-cms/Uthando-Templates/
 	Allow from All
 </Directory>
 
-# Alias /error/ /home/uthando-cms/Uthando-Error/
+Alias /error/ /home/uthando-cms/Uthando-Error/
+<Directory /home/uthando-cms/Uthando-Error/>
+	Order Allow,Deny
+	Allow from All
+</Directory>
 
-
-# ErrorDocument 403 /error/error.php
-# ErrorDocument 404 /error/error.php
-# ErrorDocument 500 /error/error.php
+ErrorDocument 401 /error/error401.php
+ErrorDocument 403 /error/error403.php
+ErrorDocument 404 /error/error404.php
+ErrorDocument 500 /error/error500.php
 
 <IfModule mod_security2.c>
 	Include /home/uthando-cms/Uthando-Apache/modsecurity/*.conf
