added default images

--- a/Uthando-Apache/conf/uthando-cms.conf
+++ b/Uthando-Apache/conf/uthando-cms.conf
@@ -93,12 +93,12 @@ ErrorDocument 500 /error/error500.php
 	Include /home/uthando-cms/Uthando-Apache/modsecurity/*.conf
 </IfModule>
 
-<IfModule mod_bw.c>
-	BandWidthModule On
-	BandWidth all 40000
-	MinBandWidth all 10000
-	ForceBandWidthModule On
-</IfModule>
+# <IfModule mod_bw.c>
+# 	BandWidthModule On
+# 	BandWidth all 40000
+# 	MinBandWidth all 10000
+# 	ForceBandWidthModule On
+# </IfModule>
 
 NameVirtualHost *:80
 
