updated apache conf for mod densible

--- a/Uthando-Apache/conf/uthando-cms.conf
+++ b/Uthando-Apache/conf/uthando-cms.conf
@@ -1,5 +1,7 @@
 FileETag none
 
+AccessFileName .htaccess
+
 <Directory />
 	AllowOverride None
 	Options FollowSymLinks
@@ -78,6 +80,13 @@ Alias /templates/ /home/uthando-cms/Uthando-Templates/
 	Allow from All
 </Directory>
 
+# Alias /email /home/uthando-cms/Uthando-Webmail/
+# <Directory /home/uthando-cms/Uthando-Webmail/>
+# 	AllowOverride Limit
+# 	Order Allow,Deny
+# 	Allow from localhost
+# </Directory>
+
 Alias /error/ /home/uthando-cms/Uthando-Error/
 <Directory /home/uthando-cms/Uthando-Error/>
 	Order Allow,Deny
@@ -89,16 +98,22 @@ ErrorDocument 403 /error/error403.php
 ErrorDocument 404 /error/error404.php
 ErrorDocument 500 /error/error500.php
 
+<IfModule mod_defensible.c>
+	DnsblUse On
+	DnsblServers httpbl.abuse.ch sbl-xbl.spamhaus.org
+	DnsblNameserver 127.0.0.1
+</IfModule>
+
 <IfModule mod_security2.c>
 	Include /home/uthando-cms/Uthando-Apache/modsecurity/*.conf
 </IfModule>
 
-# <IfModule mod_bw.c>
-# 	BandWidthModule On
-# 	BandWidth all 40000
-# 	MinBandWidth all 10000
-# 	ForceBandWidthModule On
-# </IfModule>
+<IfModule mod_bw.c>
+	BandWidthModule On
+	BandWidth all 40000
+	MinBandWidth all 10000
+	ForceBandWidthModule On
+</IfModule>
 
 NameVirtualHost *:80
 
