--- a/Uthando-Apache/conf/uthando-cms.conf
+++ b/Uthando-Apache/conf/uthando-cms.conf
@@ -80,12 +80,12 @@ Alias /templates/ /home/uthando-cms/Uthando-Templates/
 	Allow from All
 </Directory>
 
-Alias /email /home/uthando-cms/Uthando-Webmail/
-<Directory /home/uthando-cms/Uthando-Webmail/>
-	AllowOverride Limit
-	Order Allow,Deny
-	Allow from localhost
-</Directory>
+# Alias /email /home/uthando-cms/Uthando-Webmail/
+# <Directory /home/uthando-cms/Uthando-Webmail/>
+# 	AllowOverride Limit
+# 	Order Allow,Deny
+# 	Allow from localhost
+# </Directory>
 
 Alias /error/ /home/uthando-cms/Uthando-Error/
 <Directory /home/uthando-cms/Uthando-Error/>
