ssl virualhost fix

--- a/Uthando-Apache/conf/uthando-cms.conf
+++ b/Uthando-Apache/conf/uthando-cms.conf
@@ -116,6 +116,7 @@ ErrorDocument 500 /error/error500.php
 </IfModule>
 
 NameVirtualHost *:80
+NameVirtualHost *:443
 
 # Include the virtual host configurations:
 Include /home/uthando-cms/Uthando-Apache/sites-enabled/
