some content module updates.

--- a/Uthando-Apache/conf/uthando-cms.conf
+++ b/Uthando-Apache/conf/uthando-cms.conf
@@ -80,6 +80,12 @@ Alias /templates/ /home/uthando-cms/Uthando-Templates/
 	Allow from All
 </Directory>
 
+Alias /editors/ /home/uthando-cms/Uthando-Editors/
+<Directory /home/uthando-cms/Uthando-Editors/>
+	Order Allow,Deny
+	Allow from All
+</Directory>
+
 # Alias /email /home/uthando-cms/Uthando-Webmail/
 # <Directory /home/uthando-cms/Uthando-Webmail/>
 # 	AllowOverride Limit
