mootools filemanager fully working in media component.

--- a/Uthando-Apache/conf/uthando-cms.conf
+++ b/Uthando-Apache/conf/uthando-cms.conf
@@ -107,7 +107,7 @@ ErrorDocument 500 /error/error500.php
 <IfModule mod_defensible.c>
 	DnsblUse On
 	DnsblServers httpbl.abuse.ch sbl-xbl.spamhaus.org
-	DnsblNameserver 127.0.0.1
+# 	DnsblNameserver 127.0.0.1
 </IfModule>
 
 <IfModule mod_security2.c>
