--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,15 @@ Uthando-Apache/sites-enabled/*
 !000-default
 Public/tmp/*
 !index.html
-Uthando-Admin/Common/tmp/
+Uthando-Admin/tmp/
 !index.html
 Uthando-Stats/*
+Uthando-Webmail/config/db.ini.php
+Uthando-Webmail/logs/*
+Uthando-Webmail/temp/*
+Uthando-Webmail/skins/default/templates/login.html
 Uthando-ini/*
 uthando.session
 uthando.webprj
+.bzr
+.bzrignore
