added module autoloading in the boostrap.

--- a/application/configs/core.ini
+++ b/application/configs/core.ini
@@ -17,7 +17,7 @@ resources.frontController.plugins.template = "Core_Plugin_Template"
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 
-resources.view[] =
+resources.view[] = ""
 resources.view.doctype = "XHTML1_STRICT"
 resources.view.encoding = "UTF-8"
 resources.view.contentType = "text/html; charset=UTF-8"
