added ublog module and general tidy up.

--- a/application/configs/sites/uthando-cms.ini
+++ b/application/configs/sites/uthando-cms.ini
@@ -1,11 +1,11 @@
 ; this is an INI file
 [bootstrap]
-
-[development : bootstrap]
-
+frontController.defaultControllerName = "index"
+frontController.defaultAction = "index"
+frontController.defaultModule = "ublog"
 
 [site]
-public_html = "/home/shaun/Public/"
+publicHtml = "/home/shaun/Public/"
 name = "Uthando-CMS"
 http = "http://uthando-cms"
 ssl = "https://uthando-cms"
