--- a/application/configs/core.ini
+++ b/application/configs/core.ini
@@ -8,15 +8,17 @@ includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
-appnamespace = "Core_"
+appnamespace = "Core"
 autoloadernamespaces.uthando = "Uthando_"
 
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.params.displayExceptions = 0
-resources.frontController.plugins.template = "Core_Plugin_Template"
+resources.frontController.plugins.template = "Uthando_Plugin_Template"
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 
+resources.modules[] = ""
 resources.view[] = ""
 resources.view.doctype = "XHTML1_STRICT"
 resources.view.encoding = "UTF-8"
