--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,9 @@
 file.reference.library-Zend=../../../../../usr/local/zend/share/ZendFramework/library/Zend
+file.reference.libzend-framework-php-Zend=../../../../../usr/share/php/libzend-framework-php/Zend
 ignore.path=
 include.path=\
     ${php.global.include.path}:\
-    ${file.reference.library-Zend}
+    ${file.reference.libzend-framework-php-Zend}
 php.version=PHP_53
 phpunit.bootstrap=
 phpunit.bootstrap.create.tests=false
@@ -12,6 +13,6 @@ source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=true
-test.src.dir=tests
+test.src.dir=/home/shaun/NetBeansProjects/uthando-cms/source/tests
 web.root=public
 project.license=uthandocms
