--- a/application/configs/core.ini
+++ b/application/configs/core.ini
@@ -14,7 +14,8 @@ autoloadernamespaces.uthando = "Uthando_"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.params.displayExceptions = 0
-resources.frontController.plugins.template = "Uthando_Plugin_Template"
+resources.frontController.plugins.template = "Uthando_Controller_Plugin_Template"
+resources.frontController.plugins.tidyOutput = "Uthando_Controller_Plugin_TidyOutput"
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 
