--- a/application/modules/ublog/configs/routes/blog.ini
+++ b/application/modules/ublog/configs/routes/blog.ini
@@ -1,5 +1,10 @@
 ; this is an INI file
 [routes]
+routes.ublog.route = "blog/:action/*"
+routes.ublog.defaults.module = "ublog"
+routes.ublog.defaults.controller = "index"
+routes.ublog.defaults.action = "index"
+
 routes.blog.route = "blog/view/:page"
 routes.blog.defaults.module = "ublog"
 routes.blog.defaults.controller = "index"
