--- a/application/configs/core.ini
+++ b/application/configs/core.ini
@@ -10,6 +10,7 @@ bootstrap.class = "Bootstrap"
 
 appnamespace = "Core"
 autoloadernamespaces.uthando = "Uthando_"
+autoloadernamespaces.zendx = "ZendX_"
 
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
