--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,6 @@
+auxiliary.org-netbeans-modules-php-phpdoc.target=/home/shaun/NetBeansProjects/uthando-cms/source/docs
 copy.src.files=false
 copy.src.target=/var/www/Uthando-CMS
 index.file=/index.php
-run.as=LOCAL
+run.as=SCRIPT
 url=http://uthando-cms
