--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,18 +1,20 @@
 file.reference.library-Zend=../../../../../usr/local/zend/share/ZendFramework/library/Zend
 file.reference.libzend-framework-php-Zend=../../../../../usr/share/php/libzend-framework-php/Zend
+file.reference.share-php=../../../../../usr/share/php
 ignore.path=
 include.path=\
     ${php.global.include.path}:\
-    ${file.reference.libzend-framework-php-Zend}
+    ${file.reference.share-php}
 php.version=PHP_53
 phpunit.bootstrap=
 phpunit.bootstrap.create.tests=false
-phpunit.configuration=
-phpunit.suite=
+phpunit.configuration=tests/configuration.xml
+phpunit.run.test.files=false
+phpunit.suite=tests/AllTests.php
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=true
-test.src.dir=/home/shaun/NetBeansProjects/uthando-cms/source/tests
+test.src.dir=tests
 web.root=public
 project.license=uthandocms
