--- a/application/configs/core.ini
+++ b/application/configs/core.ini
@@ -49,7 +49,7 @@ resources.frontController.params.displayExceptions = 1
 
 resources.db.isDefaultTableAdapter = true
 resources.db.adapter = "PDO_MYSQL"
-resources.db.params.dbname = "uthando_core"
+resources.db.params.dbname = "uthando-cms"
 resources.db.params.username = "uthando"
 resources.db.params.password = "password"
 resources.db.params.host = "localhost"
@@ -57,7 +57,7 @@ resources.db.params.charset = "UTF8"
 
 admin.resources.db.isDefaultTableAdapter = true
 admin.resources.db.adapter = "PDO_MYSQL"
-admin.resources.db.params.dbname = "uthando_core"
+admin.resources.db.params.dbname = "uthando-cms"
 admin.resources.db.params.username = "uthando"
 admin.resources.db.params.password = "password"
 admin.resources.db.params.host = "localhost"
